[package]
name = "near-indexer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "0.9"
log = "0.4"
futures = "0.3.5"
tokio = { version = "0.2", features = ["time"] }

neard = { path = "../../neard" }
near-client = { path = "../client" }
near-primitives = { path = "../../core/primitives" }